--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-# Telegram Bot Token (получить у @BotFather)
-BOT_TOKEN=YOUR_BOT_TOKEN_HERE
+# DocGen Bot Configuration
+# Скопируйте этот файл в .env и заполните своими данными
 
-# Crypto Bot Token для приёма платежей (получить у @CryptoBot)
-CRYPTO_BOT_TOKEN=YOUR_CRYPTO_BOT_TOKEN_HERE
+# Токен бота от @BotFather
+BOT_TOKEN=your_bot_token_here
 
-# ID главного администратора (ваш Telegram ID)
-ADMIN_ID=YOUR_TELEGRAM_ID
+# Токен CryptoPay от @CryptoBot
+CRYPTO_BOT_TOKEN=your_cryptopay_token_here
 
-# ID всех администраторов через запятую
-ADMIN_IDS=123456789,987654321
+# ID главного администратора
+ADMIN_IDS=123456789
 
-# ID админа-оператора (для отдельной админ-панели)
-ADMIN_OPERATOR_ID=0
+# ID оператора (видит админ-панель)
+ADMIN_OPERATOR_ID=987654321
