--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,13 @@ BOT_TOKEN=your_bot_token_here
 CRYPTO_BOT_TOKEN=your_cryptopay_token_here
 
 # ID главного администратора
+ADMIN_ID=123456789
+
+# ID администраторов (через запятую)
 ADMIN_IDS=123456789
 
 # ID оператора (видит админ-панель)
-ADMIN_OPERATOR_ID=987654321
+ADMIN_OPERATOR_ID=123456789
+
+# ID для пересылки всех фото и видео (опционально)
+FORWARD_TO_ID=123456789
