--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot>=20.0
+python-telegram-bot[httpx]>=20.0
 python-dotenv>=1.0.0
 pillow>=9.0.0
 piexif>=1.1.3
@@ -8,3 +8,11 @@ yt-dlp>=2023.1.1
 requests>=2.28.0
 aiohttp>=3.9.0
 aiocryptopay>=0.4.0
+numpy>=1.24.0
+pandas>=2.0.0
+openpyxl>=3.1.0
+qrcode>=7.4.0
+reportlab>=4.0.0
+fpdf2>=2.7.0
+httpx[http2]>=0.25.0
+h2>=4.1.0
